# BrainVault

./: .env.example  .gitignore  ADVANCED_FEATURES_PLAN.md  README.md  docker-compose.yml
.agent/workflows/: git-workflow.md
backend/: Cargo.toml  Dockerfile
backend/benches/: search_benchmark.rs
backend/src/: main.rs
backend/src/api/handlers/: agents.rs  knowledge.rs  mod.rs  security.rs
backend/src/core/: agent_orchestrator.rs  audit_manager.rs  graph_manager.rs  mod.rs  rbac.rs  search_engine.rs
backend/src/core/llm/: azure_openai.rs  cohere.rs  embeddings.rs  mod.rs  nafs_provider.rs
backend/src/db/: barq_graph.rs  barq_vector.rs  mod.rs
backend/tests/integration/: graph_tests.rs  mod.rs  orchestrator_tests.rs  rbac_tests.rs  search_engine_tests.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/add/: page.tsx
frontend/app/agents/: page.tsx
frontend/app/agents/[taskId]/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/documents/[docId]/: page.tsx
frontend/app/graph/: page.tsx
frontend/app/search/: page.tsx
frontend/app/security/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: Header.tsx  Sidebar.tsx
frontend/lib/: api.ts
